# docs/swagger.yaml
@@ -12,6 +12,9 @@ definitions:
         type: string
       container_name:
         type: string
+      container_url:
+        description: Add this line
+        type: string
       created_at:
         type: string
       id:
@@ -19,6 +22,9 @@ definitions:
       image:
         type: string
       nats_subject:
+        type: string
+      status:
+        description: e.g., "running", "stopped"
         type: string
       type:
         type: string
